# altitude

./: .cursorrules  .env.example  .gitattributes  .gitignore  .npmrc  FIREBASE_SETUP.md  GEMINI_AGENT_COMPARISON.md  IMPORT_PHASES_STATUS.md  IMPORT_SUMMARY.md  PLAN.md  PRODUCT_BAN_PRODUCT_ANALYSIS.md  PRODUCT_BAN_REFACTOR_ANALYSIS.md  README.md  SECURITY.md  VIOLATION_PRODUCT_ANALYSIS.md  VIOLATION_TO_PRODUCTBAN_REFACTOR_ANALYSIS.md  docker-compose.yml  firebase-config.js.example  index.html  mcp-config.json  package-lock.json  package.json  pnpm-lock.yaml  rule.md  setup_github_repo.sh  setup_postgres.sh  spec.md  test_import.sh  vite.config.js
backend/: .env.example  CLOUD_SQL_SETUP.md  README.md  env.template  pyproject.toml  requirements.txt  run.py  run.sh  run_cloud_sql.sh  run_mcp.py  run_postgres_local.sh  setup_cloud_sql.sh  test_db_connection.py
backend/app/: __init__.py  config.py  main.py
backend/app/auth/: dependencies.py  firebase.py  router.py
backend/app/db/: __init__.py  converters.py  models.py  session.py
backend/app/mcp/: __init__.py  server.py
backend/app/models/: __init__.py  agency.py  agent.py  import_models.py  investigation.py  investigation_listing.py  marketplace.py  organization.py  product_ban.py  recall.py  review.py  risk_classification.py  user.py  violation.py
backend/app/routers/: __init__.py  agent.py  imports.py  investigations.py  listings.py  marketplaces.py  organizations.py  product_bans.py  (+4 more)
backend/scripts/: add_api_import_schedule_column.py  migrate_legacy_product_bans.py  migrate_violations_to_product_bans.py
(+129 files in other folders)
