[project]
name = "altitude-backend"
version = "0.1.0"
description = "Altitude Recall Monitor Backend API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
    "firebase-admin>=6.0.0",
    "APScheduler>=3.10.0",
    "cryptography>=42.0.0",
]

[project.scripts]
run-backend = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"








